fix: header overlapping the content

--- a/src/styles/partials/header.sass
+++ b/src/styles/partials/header.sass
@@ -11,7 +11,7 @@
 
     #logo
         margin: 0 auto
-        height: initial
+        height: inherit
     
     .logo-full
         display: none
