--- a/src/styles/partials/pageName.sass
+++ b/src/styles/partials/pageName.sass
@@ -2,7 +2,7 @@
     display: block
 
     &.header
-        height: 100%
+        height: fit-content
 
         p 
             margin: 0
